<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".view.fragments.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:text="@string/movie_confines"
        android:textSize="24sp" />

    <Switch
        android:id="@+id/adult_content_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:text="@string/adult_content"
        android:textSize="18sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/adults_switch_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        tools:text="@string/turn_on_adult_content" />

    <Switch
        android:id="@+id/cartoon_shoving_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:text="@string/show_cartoons"
        android:textSize="18sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/cartoons_switch_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        tools:text="@string/turn_on_cartoons" />


</LinearLayout>